Attempted to fix the images on the home page when on mobile, but the solution evades me

--- a/workoutSite/workoutApp/static/styles/styles.css
+++ b/workoutSite/workoutApp/static/styles/styles.css
@@ -35,6 +35,7 @@
     .grid-container {
       max-width: 100%;
     }
+
 }
 
 .image-grid {
@@ -51,11 +52,4 @@
     width: 100%;
     height: auto;
     border-radius: 8px;
-}
-
-.home-img {
-
-    border-radius: 20px;
-    scale: 33%;
-
 }
